# Mazer

./: .gitignore  README.md  TDP.bash  add_lib.h  compilationC.bash  display.c  display.h  generation.h  main.c  main.sh  matr_utils.h  notes.txt  pion_chainee.h  pose.txt  presentation.pptx  problemeRencontres.txt  test.c  test.sh  test.txt  test_online_web.c  tools.h  tools.h.gch
main/: CMakeLists.txt  DFS.h  NUNIXcompliC  UNIXcompilC  add_lib.h  compilationC  compilationC.bash  display.h  display.h.gch  formatted_input.txt  gcovr  generation.h  input.txt  leaks  load.h  main  main.c  main.sh  notes.txt  out.txt  pion_chain.h  pion_chainee.h  pose.txt  presentation.pptx  run  run_test  save.h  stack.h  test  test5ct.txt  tools.h
main/data/: input.txt
main/dependencies/CTest/: ctest_report.xml
main/include/: generation.h  load.h  pion_chain.h  save.h
main/include/ui/term/: display.h
main/include/utils/: Graphs.h  Queue.h  Stack.h  err_manager.h  map.h  time_and_date.h  tools.h
main/include/utils/Graphs/: ChainedNode.h  GNode.h  Node.h
main/infos/: globals.md  unix_color.md
main/main.dSYM/Contents/Resources/DWARF/: main
main/src/: CMakeLists.txt  generation.c  load.c  main.c  pion_chain.c  pion_chain.h  save.c  save.h  tools.c  tools.h
main/src/infos/: unix_color.md
main/src/ui/term/: display.c
main/src/utils/: Graphs.c  Graphs.h  Queue.c  Queue.h  Stack.c  Stack.h  err_manager.c  err_manager.h  map.c  time_and_date.c  tools.c
main/src/utils/Graphs/: ChainedNode.c  Graphs.c  Node.c
main/tests/: algo2  algo2.c  borders.c  borders.sh  color  color.c  courtt  courtt.c  display.c  display.sh  intervallrandom.c  largeread.c  load  load.c  load2  load2.c  paramValuepassing.c  read_file.c  read_matrix_andfile.h  shorway.c  simplificationmalloc.sh  sncat.c  staticval.c  tdisplay.c  test.txt  test4c.txt  test5ct.txt  test799.txt  test_lab11c.txt  test_labc11b.txt  testc2r.txt  testchain.c  testfree  testfree.c  testthread.c  void_cell.c
main/tests_v2_cpp/: CMakeLists.txt  test_queue.cpp  test_stack.cpp  test_unsigned_int.cpp
main/tests_v2_cpp/lang/: test_unsigned_int.cpp
tests/: borders.c  borders.sh  color.c  color.sh  display.c  display.sh  displaytest.c  dynamic.matrix.c  intervallrandom.c  load  load.c  load.sh  random.c  random.sh  read_file.c  simplificationmalloc.c  simplificationmalloc.sh  tdisplay.sh  test.txt
